# Rust-Oxide-Demo

./: Cargo.toml  HowToStartOPENOCD  README.md  check_rls.yml  memory.x  openocd.cfg  openocd.gdb  tempFromMemory
freertos-cargo-build/: oxide-demo-app.hex
freertos-rust-projects/: Cargo.toml  build.rs
freertos-rust-projects/examples/oxide-demo-app/: FreeRTOSConfig.h  main.rs
