[package]
name = "oxide-demo-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bxcan = { version = "0.6", optional = true }
cortex-m = "0.7.3"
cortex-m-rt = "0.7.1"
nb = "1"
rand_core = "0.6.3"
panic-halt = "0.2.0"
rtcc = "0.2.1"

# stm32f4 = "0.14.0"

synopsys-usb-otg = { version = "0.2.4", features = ["cortex-m"], optional = true }
sdio-host = { version = "0.5.0", optional = true }
embedded-dma = "0.1.2"
bare-metal = { version = "1" }
cast = { default-features = false, version = "0.3.0" }
void = { default-features = false, version = "1.0.2" }
embedded-hal = { features = ["unproven"], version = "0.2.6" }
display-interface = { version = "0.4.1", optional = true }
fugit = "0.3.3"
rtic-monotonic = { version = "1.0", optional = true }
stm32f4xx-hal = {version = "0.11.1", features = ["rt", "stm32f411"]}

[workspace]

members = [
    "freertos-rust",
    "freertos-cargo-build",
    "freertos-rust-projects"
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations