[package]
name = "oxide-demo-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.1"
nb = "1"
rand_core = "0.6.3"
panic-halt = "0.2.0"

stm32f4 = "0.14.0"

synopsys-usb-otg = { version = "0.3.0", features = ["cortex-m"], optional = true }
embedded-dma = "0.1.2"
bare-metal = { version = "1" }
cast = { default-features = false, version = "0.3.0" }
void = { default-features = false, version = "1.0.2" }
embedded-hal = { features = ["unproven"], version = "0.2.6" }
fugit = "0.3.3"
rtic-monotonic = { version = "1.0", optional = true }
stm32f4xx-hal = {version = "0.11.1", features = ["rt", "otg-fs", "usb_fs", "stm32f411"]}

cortex-m-semihosting = "0.3.7"
heapless = "0.7.9"

usb-device = "0.2.8"
usbd-serial = "0.1.1"

cortex-m-rtic = "1.0"
dwt-systick-monotonic = "1.0"

rtt-target = { version = "0.3.1", features = ["cortex-m"] }




[features]
device-selected = []
rt = ["stm32f4/rt"]
stm32f411 = ["stm32f4/stm32f411", "device-selected",
    "gpiod", "gpioe",
    "otg-fs",
    "tim2",
]
usb_fs = ["synopsys-usb-otg", "synopsys-usb-otg/fs"]



dac = []
fmc = []
fsmc = []
fmpi2c1 = []
gpiod = []
gpioe = []
gpiof = []
gpiog = []
gpioi = []
gpioj = []
gpiok = []
i2c3 = []
otg-fs = []
rng = []
tim2 = []
tim8 = []


[workspace]

members = [
    "freertos-rust",
    "freertos-cargo-build",
    "freertos-rust-projects"
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations