[package]
name = "oxide-demo-1"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
nb = "1"
rand_core = "0.6.3"
panic-halt = "0.2.0"

stm32f4xx-hal = {version = "0.11.1", features = ["rt", "stm32f411"]}
stm32f4 = "0.14.0"
embedded-hal = { features = ["unproven"], version = "0.2.6" }

embedded-dma = "0.1.2"
bare-metal = { version = "1" }
cast = { default-features = false, version = "0.3.0" }
fugit = "0.3.3"
rtic-monotonic = { version = "1.0", optional = true }
cortex-m-semihosting = "0.3.7"
heapless = "0.7.9"
cortex-m-rtic = "1.0"
dwt-systick-monotonic = "1.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }


[workspace]

members = [
    "freertos-rust",
    "freertos-cargo-build",
    "freertos-rust-projects"
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations