[package]
name = "freertos-rust-projects"
version = "0.1.0"
authors = ["Ivan Palijan"]
edition = "2018"
description = """
RTOS Projects
"""

[dependencies]
freertos-rust = {path = "../freertos-rust"}

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7.4"
cortex-m-rt = {version = "0.7.1"}

embedded-hal = { features = ["unproven"], version = "0.2.7" }
stm32f4 = "0.14.0"
stm32f4xx-hal = {version = "0.12.0", features = ["rt", "stm32f411"]}

shared-bus = { version = "0.2.2", features=["cortex-m"]}

mlx9061x = "0.2.0"
bmp180-nostd = { path = "../../bmp180-nostd" }

panic-halt = "0.2.0"

# Example: stm32-cortex-m4-blackpill
# [target.thumbv7em-none-eabihf.dependencies]

[build-dependencies]
freertos-cargo-build = {path = "../freertos-cargo-build"}